# mandelspace

./: CMakeLists.txt  README.md  build.sh  settings.cfg  settings_mandelbox.cfg  settings_mandelbulb.cfg  settings_menger_prison.cfg
src/: fractal.hpp  inputs.hpp  main.cpp  ui.hpp  util.hpp  window.hpp
src/core/: mandelbrot.hpp  raymarching.cu
src/cuda/: lighting.hpp  raymarching.cu  util.hpp  vector_ops.hpp
src/cuda/fractals/: fractals.hpp  mandelbox.cu  mandelbox.hpp  mandelbulb.cu  mandelbulb.hpp  menger_prison.cu  menger_prison.hpp  menger_sponge.hpp  sierpinski.hpp
src/util/: Config.hpp
